# my-template

image_diff/: .gitignore  README.md  pyproject.toml  requirements.txt
image_diff/image_diff/: cli.py  image_utils.py  similarity.py
image_diff/tests/: test_cli.py  test_image_utils.py  test_similarity.py
